// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneEventDetails/> render() should render call recording event 1`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      <b>
        Phone number
        :
      </b>
       
    </div>
    <div>
      <b>
        Duration:
      </b>
       
      5s
    </div>
    <div
      class="d-flex flex-column"
    >
      <div
        class="mb-3"
      >
        <b>
          Recording:
        </b>
      </div>
      <div
        class="recording-wrapper"
      >
        <audio
          class="recording-controls"
          controls=""
          src="https://uploads.gorgi.us/development/some-file.mp3"
        />
        <button
          class="wrapper secondary medium"
          type="button"
        >
          <i
            class="material-icons"
          >
            download
          </i>
        </button>
        <button
          class="wrapper float-right destructive medium"
          id="confirm-42"
          type="button"
        >
          <i
            class="material-icons"
          >
            delete
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneEventDetails/> render() should render call recording event with message 1`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      Call recording manually deleted by 
      <b>
        Michael
      </b>
    </div>
  </div>
</div>
`;

exports[`<PhoneEventDetails/> render() should render completed call event details 1`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      <b>
        Phone number
        :
      </b>
       
      +1 662 442 4075
    </div>
    <div>
      <b>
        Duration:
      </b>
       
      0min 6s
    </div>
  </div>
</div>
`;

exports[`<PhoneEventDetails/> render() should render details for answered phone call event 1`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      <b>
        Phone number
        :
      </b>
       
      +1 662 442 4075
    </div>
    <div>
      <b>
        Forwarded to: 
      </b>
       
      +1 66324002433
    </div>
  </div>
</div>
`;

exports[`<PhoneEventDetails/> render() should render details for the rest of events 1`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      <b>
        Phone number
        :
      </b>
       
      +1 662 442 4075
    </div>
  </div>
</div>
`;

exports[`<PhoneEventDetails/> render() should render details for the rest of events 2`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      <b>
        Phone number
        :
      </b>
       
      +1 662 442 4075
    </div>
  </div>
</div>
`;

exports[`<PhoneEventDetails/> render() should render voicemail event details 1`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      <b>
        Phone number
        :
      </b>
       
      +1 662 442 4075
    </div>
    <div>
      <b>
        Duration:
      </b>
       
      6s
    </div>
    <div
      class="d-flex flex-column"
    >
      <div
        class="mb-3"
      >
        <b>
          Voicemail:
        </b>
      </div>
      <div
        class="recording-wrapper"
      >
        <audio
          class="recording-controls"
          controls=""
          src="https://uploads.gorgi.us/development/Zr1WE86rb6J4Mvgl/RE6fac6a901e0b886cec366ceb6365a8cd-a358dc82-a84b-4975-baef-7852d7c9c180.mp3"
        />
        <button
          class="wrapper secondary medium"
          type="button"
        >
          <i
            class="material-icons"
          >
            download
          </i>
        </button>
        <button
          class="wrapper float-right destructive medium"
          id="confirm-42"
          type="button"
        >
          <i
            class="material-icons"
          >
            delete
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneEventDetails/> render() should render voicemail event details with message 1`] = `
<div
  class="eventDetails"
>
  <div
    class="content"
  >
    <div>
      Voicemail recording manually deleted by 
      <b>
        Michael
      </b>
    </div>
  </div>
</div>
`;
